packages/gaist/examples/invalid/unknown-section.gaist
// Unknown section type
state {
  count = 0;
}

unknown {
  something = 42;
} 